[gd_scene load_steps=3 format=3 uid="uid://brugaaptwigai"]

[ext_resource type="Script" path="res://scripts/Promotion_Menu.gd" id="1_n0jwr"]
[ext_resource type="Texture2D" uid="uid://3bjhftmbfpw" path="res://images/Chess_Pieces_Sprite.svg" id="2_bv3g0"]

[node name="Promotion_Menu" type="ColorRect"]
custom_minimum_size = Vector2(128, 512)
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
color = Color(1, 1, 1, 0.45098)
script = ExtResource("1_n0jwr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -512.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="Queen" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
ignore_texture_size = true

[node name="ChessPiecesSprite" type="Sprite2D" parent="VBoxContainer/Queen"]
texture = ExtResource("2_bv3g0")
offset = Vector2(64, 64)
hframes = 6
vframes = 2
frame = 1

[node name="Knight" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
ignore_texture_size = true

[node name="ChessPiecesSprite" type="Sprite2D" parent="VBoxContainer/Knight"]
texture = ExtResource("2_bv3g0")
offset = Vector2(64, 64)
hframes = 6
vframes = 2
frame = 3

[node name="Rook" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
ignore_texture_size = true

[node name="ChessPiecesSprite" type="Sprite2D" parent="VBoxContainer/Rook"]
texture = ExtResource("2_bv3g0")
offset = Vector2(64, 64)
hframes = 6
vframes = 2
frame = 4

[node name="Bishop" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
ignore_texture_size = true

[node name="ChessPiecesSprite" type="Sprite2D" parent="VBoxContainer/Bishop"]
texture = ExtResource("2_bv3g0")
offset = Vector2(64, 64)
hframes = 6
vframes = 2
frame = 2

[connection signal="pressed" from="VBoxContainer/Queen" to="." method="_on_queen_pressed"]
[connection signal="pressed" from="VBoxContainer/Knight" to="." method="_on_knight_pressed"]
[connection signal="pressed" from="VBoxContainer/Rook" to="." method="_on_rook_pressed"]
[connection signal="pressed" from="VBoxContainer/Bishop" to="." method="_on_bishop_pressed"]
